--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Product Listing</title>
+  <title>Product Listing with Sorting</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -11,9 +11,12 @@
       padding: 20px;
     }
 
-    .search-container {
+    .top-controls {
       display: flex;
+      justify-content: space-between;
+      align-items: center;
       margin-bottom: 20px;
+      gap: 10px;
     }
 
     input[type="text"] {
@@ -29,6 +32,11 @@
       color: white;
       border: none;
       cursor: pointer;
+    }
+
+    select {
+      padding: 10px;
+      font-size: 16px;
     }
 
     .product-list {
@@ -59,9 +67,16 @@
 </head>
 <body>
 
-  <div class="search-container">
+  <div class="top-controls">
     <input type="text" id="searchInput" placeholder="Search products by name...">
     <button onclick="searchProducts()">Search</button>
+    <select id="sortSelect" onchange="applySort()">
+      <option value="">Sort By</option>
+      <option value="price-asc">Price: Low to High</option>
+      <option value="price-desc">Price: High to Low</option>
+      <option value="rating-asc">Rating: Low to High</option>
+      <option value="rating-desc">Rating: High to Low</option>
+    </select>
   </div>
 
   <div class="error" id="errorMsg"></div>
@@ -69,6 +84,8 @@
   <div class="product-list" id="productList"></div>
 
   <script>
+    let allProducts = [];
+
     // Load all products on page load
     window.onload = () => {
       fetchProducts('https://dummyjson.com/products');
@@ -80,24 +97,31 @@
       fetch(url)
         .then(res => res.json())
         .then(data => {
-          const list = document.getElementById('productList');
-          list.innerHTML = '';
-          data.products.forEach(product => {
-            const item = document.createElement('div');
-            item.className = 'product';
-            item.innerHTML = `
-              <img src="${product.thumbnail}" alt="${product.title}">
-              <h3>${product.title}</h3>
-              <p><strong>Brand:</strong> ${product.brand}</p>
-              <p><strong>Price:</strong> ₹${product.price}</p>
-            `;
-            list.appendChild(item);
-          });
+          allProducts = data.products;
+          displayProducts(allProducts);
         })
         .catch(error => {
           document.getElementById('errorMsg').innerText = 'Error fetching products.';
           console.error(error);
         });
+    }
+
+    // Render products
+    function displayProducts(products) {
+      const list = document.getElementById('productList');
+      list.innerHTML = '';
+      products.forEach(product => {
+        const item = document.createElement('div');
+        item.className = 'product';
+        item.innerHTML = `
+          <img src="${product.thumbnail}" alt="${product.title}">
+          <h3>${product.title}</h3>
+          <p><strong>Brand:</strong> ${product.brand}</p>
+          <p><strong>Price:</strong> ₹${product.price}</p>
+          <p><strong>Rating:</strong> ${product.rating}</p>
+        `;
+        list.appendChild(item);
+      });
     }
 
     // Search functionality
@@ -109,6 +133,24 @@
       }
       const url = `https://dummyjson.com/products/search?q=${encodeURIComponent(input)}`;
       fetchProducts(url);
+    }
+
+    // Sorting
+    function applySort() {
+      const sortValue = document.getElementById('sortSelect').value;
+      let sorted = [...allProducts];
+
+      if (sortValue === 'price-asc') {
+        sorted.sort((a, b) => a.price - b.price);
+      } else if (sortValue === 'price-desc') {
+        sorted.sort((a, b) => b.price - a.price);
+      } else if (sortValue === 'rating-asc') {
+        sorted.sort((a, b) => a.rating - b.rating);
+      } else if (sortValue === 'rating-desc') {
+        sorted.sort((a, b) => b.rating - a.rating);
+      }
+
+      displayProducts(sorted);
     }
   </script>
 
